--- a/world-population/requirements.txt
+++ b/world-population/requirements.txt
@@ -5,8 +5,11 @@ kiwisolver==1.4.7
 matplotlib==3.10.0
 numpy==2.2.3
 packaging==24.2
+pandas==2.3.1
 pillow==11.1.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+pytz==2025.2
 six==1.17.0
+tzdata==2025.2
 wheel @ file:///opt/homebrew/Cellar/python%403.13/3.13.2/libexec/wheel-0.45.1-py3-none-any.whl#sha256=b9235939e2096903717cb6bfc132267f8a7e46deb2ec3ef9c5e234ea301795d0
